--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://richiwu.github.io/richiewu",
+  "homepage": "http://richiewu.xyz",
   "name": "richiewu",
   "version": "0.1.0",
   "private": true,
